added styles, stopped scrolling

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,17 @@
           <div id="title">
             <p id="titleText">Web Developer</p>
           </div>
+          <div id="btns">
+            <div id="portfolioBtn">
+              <p>Portfolio</p>
+            </div>
+            <div id="contact">
+              <p>Contact</p>
+            </div>
+            <div id="aboutBtn">
+              <p>About</p>
+            </div>
+          </div>
         </div>
       </div>
       <div id="backgroundCircle">
